versions z-index fix

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -865,13 +865,17 @@ article.list {
     }
 }
 
+.wire-articles__item--open + .wire-articles__versions, .wire-articles__item--selected + .wire-articles__versions {
+    outline: 1px solid #00aceb;
+}
+
 .wire-articles__versions {
     max-height: 400px;
     flex-direction: column;
     background: #fafafa;
     box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2);
     transition: all .2s ease-out;
-    z-index: -1;
+    z-index: 0;
     > * {
         opacity: 1;
         transition: all .2s ease-out;
